// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxDropdownHeader customize 1`] = `
<div>
  <h3
    class="dropdown-header bazinga"
  >
    Test
  </h3>
</div>
`;

exports[`loads and displays CxDropdownHeader component 1`] = `
<div>
  <h6
    class="dropdown-header"
  >
    Test
  </h6>
</div>
`;
